archivos_previos/procesador inicial/analisis sintactico/y.output
Gramática

    0 $accept: programa $end

    1 programa: lista_sentencias

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA
    3                 | sentencia PTOCOMA

    4 sentencia: sentencia_declar_valor
    5          | sentencia_declar_fun
    6          | sentencia_plot
    7          | error

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER DOSPTOS IDENT ASIGN expresion

   10 sentencia_plot: PLOT lista_ident

   11 expresion: PAR_IZQ expresion PAR_DER
   12          | IF expresion THEN expresion ELSE expresion
   13          | IDENT PAR_IZQ lista_expresiones PAR_DER
   14          | expresion COR_IZQ expresion COR_DER
   15          | OP_MENOS expresion
   16          | OP_NEG expresion
   17          | expresion OP_SUMA expresion
   18          | expresion OP_MENOS expresion
   19          | expresion OP_MULTIP expresion
   20          | expresion OP_IGUAL expresion
   21          | expresion OP_COMP expresion
   22          | expresion OP_OR expresion
   23          | expresion OP_AND expresion
   24          | IDENT
   25          | constante
   26          | error

   27 lista_expresiones: lista_expresiones COMA expresion
   28                  | expresion

   29 lista_param: lista_param COMA lista_ident DOSPTOS IDENT
   30            | lista_ident DOSPTOS IDENT

   31 lista_ident: lista_ident COMA IDENT
   32            | IDENT

   33 constante: CONST_BOOL
   34          | CONST_ENTERO
   35          | CONST_REAL


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 7 26
PAR_IZQ (258) 9 11 13
PAR_DER (259) 9 11 13
ASIGN (260) 8 9
COMA (261) 27 29 31
PTOCOMA (262) 2 3
DOSPTOS (263) 8 9 29 30
IF (264) 12
THEN (265) 12
ELSE (266) 12
PLOT (267) 10
IDENT (268) 8 9 13 24 29 30 31 32
CONST_ENTERO (269) 34
CONST_BOOL (270) 33
CONST_REAL (271) 35
OP_OR (272) 22
OP_AND (273) 23
OP_IGUAL (274) 20
OP_COMP (275) 21
OP_SUMA (276) 17
OP_MENOS (277) 15 18
OP_MULTIP (278) 19
OP_NEG (279) 16
COR_IZQ (280) 14
COR_DER (281) 14


No terminales con las reglas donde aparecen

$accept (27)
    en la izquierda: 0
programa (28)
    en la izquierda: 1, en la derecha: 0
lista_sentencias (29)
    en la izquierda: 2 3, en la derecha: 1 2
sentencia (30)
    en la izquierda: 4 5 6 7, en la derecha: 2 3
sentencia_declar_valor (31)
    en la izquierda: 8, en la derecha: 4
sentencia_declar_fun (32)
    en la izquierda: 9, en la derecha: 5
sentencia_plot (33)
    en la izquierda: 10, en la derecha: 6
expresion (34)
    en la izquierda: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26,
    en la derecha: 8 9 11 12 14 15 16 17 18 19 20 21 22 23 27 28
lista_expresiones (35)
    en la izquierda: 27 28, en la derecha: 13 27
lista_param (36)
    en la izquierda: 29 30, en la derecha: 9 29
lista_ident (37)
    en la izquierda: 31 32, en la derecha: 10 29 30 31
constante (38)
    en la izquierda: 33 34 35, en la derecha: 25


Estado 0

    0 $accept: . programa $end

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    programa                ir al estado 4
    lista_sentencias        ir al estado 5
    sentencia               ir al estado 6
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 1

    7 sentencia: error .

    $default  reduce usando la regla 7 (sentencia)


Estado 2

   10 sentencia_plot: PLOT . lista_ident

    IDENT  desplazar e ir al estado 10

    lista_ident  ir al estado 11


Estado 3

    8 sentencia_declar_valor: IDENT . DOSPTOS IDENT ASIGN expresion
    9 sentencia_declar_fun: IDENT . PAR_IZQ lista_param PAR_DER DOSPTOS IDENT ASIGN expresion

    PAR_IZQ  desplazar e ir al estado 12
    DOSPTOS  desplazar e ir al estado 13


Estado 4

    0 $accept: programa . $end

    $end  desplazar e ir al estado 14


Estado 5

    1 programa: lista_sentencias .
    2 lista_sentencias: lista_sentencias . sentencia PTOCOMA

    error  desplazar e ir al estado 1
    PLOT   desplazar e ir al estado 2
    IDENT  desplazar e ir al estado 3

    $end  reduce usando la regla 1 (programa)

    sentencia               ir al estado 15
    sentencia_declar_valor  ir al estado 7
    sentencia_declar_fun    ir al estado 8
    sentencia_plot          ir al estado 9


Estado 6

    3 lista_sentencias: sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 16


Estado 7

    4 sentencia: sentencia_declar_valor .

    $default  reduce usando la regla 4 (sentencia)


Estado 8

    5 sentencia: sentencia_declar_fun .

    $default  reduce usando la regla 5 (sentencia)


Estado 9

    6 sentencia: sentencia_plot .

    $default  reduce usando la regla 6 (sentencia)


Estado 10

   32 lista_ident: IDENT .

    $default  reduce usando la regla 32 (lista_ident)


Estado 11

   10 sentencia_plot: PLOT lista_ident .
   31 lista_ident: lista_ident . COMA IDENT

    COMA  desplazar e ir al estado 17

    $default  reduce usando la regla 10 (sentencia_plot)


Estado 12

    9 sentencia_declar_fun: IDENT PAR_IZQ . lista_param PAR_DER DOSPTOS IDENT ASIGN expresion

    IDENT  desplazar e ir al estado 10

    lista_param  ir al estado 18
    lista_ident  ir al estado 19


Estado 13

    8 sentencia_declar_valor: IDENT DOSPTOS . IDENT ASIGN expresion

    IDENT  desplazar e ir al estado 20


Estado 14

    0 $accept: programa $end .

    $default  aceptar


Estado 15

    2 lista_sentencias: lista_sentencias sentencia . PTOCOMA

    PTOCOMA  desplazar e ir al estado 21


Estado 16

    3 lista_sentencias: sentencia PTOCOMA .

    $default  reduce usando la regla 3 (lista_sentencias)


Estado 17

   31 lista_ident: lista_ident COMA . IDENT

    IDENT  desplazar e ir al estado 22


Estado 18

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param . PAR_DER DOSPTOS IDENT ASIGN expresion
   29 lista_param: lista_param . COMA lista_ident DOSPTOS IDENT

    PAR_DER  desplazar e ir al estado 23
    COMA     desplazar e ir al estado 24


Estado 19

   30 lista_param: lista_ident . DOSPTOS IDENT
   31 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 17
    DOSPTOS  desplazar e ir al estado 25


Estado 20

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT . ASIGN expresion

    ASIGN  desplazar e ir al estado 26


Estado 21

    2 lista_sentencias: lista_sentencias sentencia PTOCOMA .

    $default  reduce usando la regla 2 (lista_sentencias)


Estado 22

   31 lista_ident: lista_ident COMA IDENT .

    $default  reduce usando la regla 31 (lista_ident)


Estado 23

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER . DOSPTOS IDENT ASIGN expresion

    DOSPTOS  desplazar e ir al estado 27


Estado 24

   29 lista_param: lista_param COMA . lista_ident DOSPTOS IDENT

    IDENT  desplazar e ir al estado 10

    lista_ident  ir al estado 28


Estado 25

   30 lista_param: lista_ident DOSPTOS . IDENT

    IDENT  desplazar e ir al estado 29


Estado 26

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 39
    constante  ir al estado 40


Estado 27

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER DOSPTOS . IDENT ASIGN expresion

    IDENT  desplazar e ir al estado 41


Estado 28

   29 lista_param: lista_param COMA lista_ident . DOSPTOS IDENT
   31 lista_ident: lista_ident . COMA IDENT

    COMA     desplazar e ir al estado 17
    DOSPTOS  desplazar e ir al estado 42


Estado 29

   30 lista_param: lista_ident DOSPTOS IDENT .

    $default  reduce usando la regla 30 (lista_param)


Estado 30

   26 expresion: error .

    $default  reduce usando la regla 26 (expresion)


Estado 31

   11 expresion: PAR_IZQ . expresion PAR_DER

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 43
    constante  ir al estado 40


Estado 32

   12 expresion: IF . expresion THEN expresion ELSE expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 44
    constante  ir al estado 40


Estado 33

   13 expresion: IDENT . PAR_IZQ lista_expresiones PAR_DER
   24          | IDENT .

    PAR_IZQ  desplazar e ir al estado 45

    $default  reduce usando la regla 24 (expresion)


Estado 34

   34 constante: CONST_ENTERO .

    $default  reduce usando la regla 34 (constante)


Estado 35

   33 constante: CONST_BOOL .

    $default  reduce usando la regla 33 (constante)


Estado 36

   35 constante: CONST_REAL .

    $default  reduce usando la regla 35 (constante)


Estado 37

   15 expresion: OP_MENOS . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 46
    constante  ir al estado 40


Estado 38

   16 expresion: OP_NEG . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 47
    constante  ir al estado 40


Estado 39

    8 sentencia_declar_valor: IDENT DOSPTOS IDENT ASIGN expresion .
   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 8 (sentencia_declar_valor)


Estado 40

   25 expresion: constante .

    $default  reduce usando la regla 25 (expresion)


Estado 41

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER DOSPTOS IDENT . ASIGN expresion

    ASIGN  desplazar e ir al estado 56


Estado 42

   29 lista_param: lista_param COMA lista_ident DOSPTOS . IDENT

    IDENT  desplazar e ir al estado 57


Estado 43

   11 expresion: PAR_IZQ expresion . PAR_DER
   14          | expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    PAR_DER    desplazar e ir al estado 58
    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55


Estado 44

   12 expresion: IF expresion . THEN expresion ELSE expresion
   14          | expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    THEN       desplazar e ir al estado 59
    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55


Estado 45

   13 expresion: IDENT PAR_IZQ . lista_expresiones PAR_DER

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion          ir al estado 60
    lista_expresiones  ir al estado 61
    constante          ir al estado 40


Estado 46

   14 expresion: expresion . COR_IZQ expresion COR_DER
   15          | OP_MENOS expresion .
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 15 (expresion)


Estado 47

   14 expresion: expresion . COR_IZQ expresion COR_DER
   16          | OP_NEG expresion .
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    COR_IZQ  desplazar e ir al estado 55

    $default  reduce usando la regla 16 (expresion)


Estado 48

   22 expresion: expresion OP_OR . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 62
    constante  ir al estado 40


Estado 49

   23 expresion: expresion OP_AND . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 63
    constante  ir al estado 40


Estado 50

   20 expresion: expresion OP_IGUAL . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 64
    constante  ir al estado 40


Estado 51

   21 expresion: expresion OP_COMP . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 65
    constante  ir al estado 40


Estado 52

   17 expresion: expresion OP_SUMA . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 66
    constante  ir al estado 40


Estado 53

   18 expresion: expresion OP_MENOS . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 67
    constante  ir al estado 40


Estado 54

   19 expresion: expresion OP_MULTIP . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 68
    constante  ir al estado 40


Estado 55

   14 expresion: expresion COR_IZQ . expresion COR_DER

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 69
    constante  ir al estado 40


Estado 56

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER DOSPTOS IDENT ASIGN . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 70
    constante  ir al estado 40


Estado 57

   29 lista_param: lista_param COMA lista_ident DOSPTOS IDENT .

    $default  reduce usando la regla 29 (lista_param)


Estado 58

   11 expresion: PAR_IZQ expresion PAR_DER .

    $default  reduce usando la regla 11 (expresion)


Estado 59

   12 expresion: IF expresion THEN . expresion ELSE expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 71
    constante  ir al estado 40


Estado 60

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion
   28 lista_expresiones: expresion .

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 28 (lista_expresiones)


Estado 61

   13 expresion: IDENT PAR_IZQ lista_expresiones . PAR_DER
   27 lista_expresiones: lista_expresiones . COMA expresion

    PAR_DER  desplazar e ir al estado 72
    COMA     desplazar e ir al estado 73


Estado 62

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   22          | expresion OP_OR expresion .
   23          | expresion . OP_AND expresion

    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 22 (expresion)


Estado 63

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion
   23          | expresion OP_AND expresion .

    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 23 (expresion)


Estado 64

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   20          | expresion OP_IGUAL expresion .
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 20 (expresion)


Estado 65

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   21          | expresion OP_COMP expresion .
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 21 (expresion)


Estado 66

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   17          | expresion OP_SUMA expresion .
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 17 (expresion)


Estado 67

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   18          | expresion OP_MENOS expresion .
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 18 (expresion)


Estado 68

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   19          | expresion OP_MULTIP expresion .
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    COR_IZQ  desplazar e ir al estado 55

    $default  reduce usando la regla 19 (expresion)


Estado 69

   14 expresion: expresion . COR_IZQ expresion COR_DER
   14          | expresion COR_IZQ expresion . COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55
    COR_DER    desplazar e ir al estado 74


Estado 70

    9 sentencia_declar_fun: IDENT PAR_IZQ lista_param PAR_DER DOSPTOS IDENT ASIGN expresion .
   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 9 (sentencia_declar_fun)


Estado 71

   12 expresion: IF expresion THEN expresion . ELSE expresion
   14          | expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    ELSE       desplazar e ir al estado 75
    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55


Estado 72

   13 expresion: IDENT PAR_IZQ lista_expresiones PAR_DER .

    $default  reduce usando la regla 13 (expresion)


Estado 73

   27 lista_expresiones: lista_expresiones COMA . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 76
    constante  ir al estado 40


Estado 74

   14 expresion: expresion COR_IZQ expresion COR_DER .

    $default  reduce usando la regla 14 (expresion)


Estado 75

   12 expresion: IF expresion THEN expresion ELSE . expresion

    error         desplazar e ir al estado 30
    PAR_IZQ       desplazar e ir al estado 31
    IF            desplazar e ir al estado 32
    IDENT         desplazar e ir al estado 33
    CONST_ENTERO  desplazar e ir al estado 34
    CONST_BOOL    desplazar e ir al estado 35
    CONST_REAL    desplazar e ir al estado 36
    OP_MENOS      desplazar e ir al estado 37
    OP_NEG        desplazar e ir al estado 38

    expresion  ir al estado 77
    constante  ir al estado 40


Estado 76

   14 expresion: expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion
   27 lista_expresiones: lista_expresiones COMA expresion .

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 27 (lista_expresiones)


Estado 77

   12 expresion: IF expresion THEN expresion ELSE expresion .
   14          | expresion . COR_IZQ expresion COR_DER
   17          | expresion . OP_SUMA expresion
   18          | expresion . OP_MENOS expresion
   19          | expresion . OP_MULTIP expresion
   20          | expresion . OP_IGUAL expresion
   21          | expresion . OP_COMP expresion
   22          | expresion . OP_OR expresion
   23          | expresion . OP_AND expresion

    OP_OR      desplazar e ir al estado 48
    OP_AND     desplazar e ir al estado 49
    OP_IGUAL   desplazar e ir al estado 50
    OP_COMP    desplazar e ir al estado 51
    OP_SUMA    desplazar e ir al estado 52
    OP_MENOS   desplazar e ir al estado 53
    OP_MULTIP  desplazar e ir al estado 54
    COR_IZQ    desplazar e ir al estado 55

    $default  reduce usando la regla 12 (expresion)
